increased z index for skills canvas. fixed overflow issue with skills section. removed gtm

--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -57,7 +57,7 @@ h3 {
 }
 
 .project-details {
-	width: 100%;
+
 	padding: 20px;
 	background-image: url('/assets/images/space.png');
 	background-size: cover;
