--- a/assets/stylesheets/skills.css
+++ b/assets/stylesheets/skills.css
@@ -6,6 +6,7 @@ canvas {
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	z-index: 5;
 }
 
 h2 {
@@ -24,8 +25,16 @@ p {
 }
 
 .skills-header {
+	overflow: hidden;
+	position: relative;
+}
+.skills-sr {
 	display: flex;
 	flex-flow: row nowrap;
+	position: relative;
+	overflow: hidden;
+}
+.skills-text {
 	width: fit-content;
 }
 
@@ -86,6 +95,7 @@ h2, h3, li {
 	animation-name: spinaway;
 	animation-duration: 2s;
 	animation-fill-mode: forwards;
+	position: absolute;
 }
 @keyframes spinaway {
 	from {}
